==> OoOChildOoO/stm32f429_bsp/Core/User/flash/bsp_spi_flash.c <==
#include "bsp_spi_flash.h"

void SPI_FLASH_Init(void)
{
  /*##-1- Configure the SPI peripheral #######################################*/
  SPI_FLASH_GOIO_Init();
  /* Set the SPI parameters */
  SPI_Handle.Instance = SPIx;
  SPI_Handle.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
  SPI_Handle.Init.Direction = SPI_DIRECTION_2LINES;
  SPI_Handle.Init.CLKPhase = SPI_PHASE_1EDGE;
  SPI_Handle.Init.CLKPolarity = SPI_POLARITY_LOW;
  SPI_Handle.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
  SPI_Handle.Init.CRCPolynomial = 10;
  SPI_Handle.Init.DataSize = SPI_DATASIZE_8BIT;
  SPI_Handle.Init.FirstBit = SPI_FIRSTBIT_MSB;
  SPI_Handle.Init.NSS = SPI_NSS_SOFT;
  SPI_Handle.Init.TIMode = SPI_TIMODE_DISABLE;

  SPI_Handle.Init.Mode = SPI_MODE_MASTER;

  HAL_SPI_Init(&SPI_Handle);

  __HAL_SPI_ENABLE(&SPI_Handle);

  /* 使 SPI_FLASH 进入 4 字节地址模式 */
  SPI_FLASH_Mode_Init(FLASH_ICON);
  SPI_FLASH_Mode_Init(FLASH_MP3);
  SPI_FLASH_Mode_Init(FLASH_PAT);
}

void SPI_FLASH_BufferWrite(EXFLASH_EnumTypeDef wcs, uint8_t *pBuffer, uint32_t WriteAddr, uint32_t NumByteToWrite)
{
#if 0
  uint8_t NumOfFullPage = 0, NumOfSinglePage = 0, NumOfAllPage = 0, AddrP = 0, countP = 0, temp = 0;
  if (NumByteToWrite == 0)
    return;
  /*mod运算求余，若writeAddr是SPI_FLASH_PageSize整数倍，运算结果Addr值为0*/
  AddrP = WriteAddr % ExFlashTypeList[wcs].pageSize;
  /*差count个数据值，刚好可以对齐到页地址*/
  countP = ExFlashTypeList[wcs].pageSize - AddrP;
  /*计算出要写多少整数页*/
  NumOfFullPage = NumByteToWrite / ExFlashTypeList[wcs].pageSize;
  /*mod运算求余，计算出剩余不满一页的字节数*/
  NumOfSinglePage = NumByteToWrite % ExFlashTypeList[wcs].pageSize;

  /* AddrP=0,则WriteAddr 刚好按页对齐 aligned  */
  if (AddrP == 0)
  {
    /* NumByteToWrite < SPI_FLASH_PageSize */
    if (NumOfFullPage == 0)
    {
      SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, NumByteToWrite);
    }
    else /* NumByteToWrite > SPI_FLASH_PageSize */
    {
      /*先把整数页都写了*/
      while (NumOfFullPage--)
      {
        SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, ExFlashTypeList[wcs].pageSize);
        WriteAddr += ExFlashTypeList[wcs].pageSize;
        pBuffer += ExFlashTypeList[wcs].pageSize;
      }
      /*若有多余的不满一页的数据，把它写完*/
      SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, NumOfSinglePage);
    }
  }
  /* 若地址与 SPI_FLASH_PageSize 不对齐  */
  else
  {
    /* NumByteToWrite < SPI_FLASH_PageSize */
    if (NumOfFullPage == 0)
    {
      /*当前页剩余的count个位置比NumOfSingle小，写不完*/
      if (NumOfSinglePage > countP)
      {
        temp = NumOfSinglePage - countP;

        /*先写满当前页*/
        SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, countP);
        WriteAddr += countP;
        pBuffer += countP;

        /*再写剩余的数据*/
        SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, temp);
      }
      else /*当前页剩余的count个位置能写完NumOfSingle个数据*/
      {
        SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, NumByteToWrite);
      }
    }
    else /* NumByteToWrite > SPI_FLASH_PageSize */
    {
      /*地址不对齐多出的count分开处理，不加入这个运算*/
      NumByteToWrite -= countP;
      NumOfFullPage = NumByteToWrite / ExFlashTypeList[wcs].pageSize;
      NumOfSinglePage = NumByteToWrite % ExFlashTypeList[wcs].pageSize;

      SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, countP);
      WriteAddr += countP;
      pBuffer += countP;

      /*把整数页都写了*/
      while (NumOfFullPage--)
      {
        SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, ExFlashTypeList[wcs].pageSize);
        WriteAddr += ExFlashTypeList[wcs].pageSize;
        pBuffer += ExFlashTypeList[wcs].pageSize;
      }
      /*若有多余的不满一页的数据，把它写完*/
      if (NumOfSinglePage != 0)
      {
        SPI_FLASH_PageWrite(wcs, pBuffer, WriteAddr, NumOfSinglePage);
      }
    }
  }
#else
  uint16_t NumOfFullSec = 0, NumOfSingleSec = 0, AddrSec = 0, countSec = 0;
  if (NumByteToWrite == 0)
    return;
  /*mod运算求余，若writeAddr是SPI_FLASH_PageSize整数倍，运算结果Addr值为0*/
  AddrSec = WriteAddr % ExFlashTypeList[wcs].sectorSize;
  /*差count个数据值，刚好可以对齐到页地址*/
  countSec = ExFlashTypeList[wcs].sectorSize - AddrSec;
  /*计算出要写多少整数页*/
  NumOfFullSec = NumByteToWrite / ExFlashTypeList[wcs].sectorSize;
  /*mod运算求余，计算出剩余不满一页的字节数*/
  NumOfSingleSec = NumByteToWrite % ExFlashTypeList[wcs].sectorSize;

  /* AddrSec=0,则WriteAddr 刚好按页对齐 aligned  */
  if (AddrSec == 0)
  {
    /* NumByteToWrite < SPI_FLASH_PageSize */
    if (NumOfFullSec == 0)
    {
      SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, NumByteToWrite);
    }
    else /* NumByteToWrite > SPI_FLASH_PageSize */
    {
      /*先把整数页都写了*/
      while (NumOfFullSec--)
      {
        SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, ExFlashTypeList[wcs].sectorSize);
        WriteAddr += ExFlashTypeList[wcs].sectorSize;
        pBuffer += ExFlashTypeList[wcs].sectorSize;
      }
      /*若有多余的不满一页的数据，把它写完*/
      SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, NumOfSingleSec);
    }
  }
  /* 若地址与 SPI_FLASH_PageSize 不对齐  */
  else
  {
    /* NumByteToWrite < SPI_FLASH_SectorSize */
    if (NumOfFullSec == 0)
    {
      /*当前页剩余的count个位置比NumOfSingle小，写不完*/
      if (NumOfSingleSec > countSec)
      {
        uint16_t temp = 0;
        temp = NumOfSingleSec - countSec;

        /*先写满当前页*/
        SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, countSec);
        WriteAddr += countSec;
        pBuffer += countSec;

        /*再写剩余的数据*/
        SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, temp);
      }
      else /*当前页剩余的count个位置能写完 NumOfSingle 个数据*/
      {
        SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, NumByteToWrite);
      }
    }
    else /* NumByteToWrite > SPI_FLASH_SectorSize */
    {
      /*地址不对齐多出的count分开处理，不加入这个运算*/
      NumByteToWrite -= countSec;
      NumOfFullSec = NumByteToWrite / ExFlashTypeList[wcs].pageSize;
      NumOfSingleSec = NumByteToWrite % ExFlashTypeList[wcs].pageSize;

      SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, countSec);
      WriteAddr += countSec;
      pBuffer += countSec;

      /*把整数页都写了*/
      while (NumOfFullSec--)
      {
        SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, ExFlashTypeList[wcs].pageSize);
        WriteAddr += ExFlashTypeList[wcs].pageSize;
        pBuffer += ExFlashTypeList[wcs].pageSize;
      }
      /*若有多余的不满一页的数据，把它写完*/
      if (NumOfSingleSec != 0)
      {
        SPI_FLASH_SectorWrite(wcs, pBuffer, WriteAddr, NumOfSingleSec);
      }
    }
  }
#endif
}

uint8_t SPI_FLASH_SendByte(uint8_t byte)
{
  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* 等待发送缓冲区为空，TXE事件 */
  while (__HAL_SPI_GET_FLAG(&SPI_Handle, SPI_FLAG_TXE) == RESET)
  {
    if ((SPITimeout--) == 0)
      return SPI_TIMEOUT_UserCallback(0);
  }

  /* 写入数据寄存器，把要写入的数据写入发送缓冲区 */
  WRITE_REG(SPI_Handle.Instance->DR, byte);

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* 等待接收缓冲区非空，RXNE事件 */
  while (__HAL_SPI_GET_FLAG(&SPI_Handle, SPI_FLAG_RXNE) == RESET)
  {
    if ((SPITimeout--) == 0)
      return SPI_TIMEOUT_UserCallback(1);
  }

  /* 读取数据寄存器，获取接收缓冲区数据 */
  return READ_REG(SPI_Handle.Instance->DR);
}

uint16_t SPI_FLASH_SendHalfWord(uint16_t HalfWord)
{

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* Loop while DR register in not emplty */
  while (__HAL_SPI_GET_FLAG(&SPI_Handle, SPI_FLAG_TXE) == RESET)
  {
    if ((SPITimeout--) == 0)
      return SPI_TIMEOUT_UserCallback(2);
  }

  /* Send Half Word through the SPIx peripheral */
  WRITE_REG(SPI_Handle.Instance->DR, HalfWord);

  SPITimeout = SPIT_FLAG_TIMEOUT;

  /* Wait to receive a Half Word */
  while (__HAL_SPI_GET_FLAG(&SPI_Handle, SPI_FLAG_RXNE) == RESET)
  {
    if ((SPITimeout--) == 0)
      return SPI_TIMEOUT_UserCallback(3);
  }
  /* Return the Half Word read from the SPI bus */
  return READ_REG(SPI_Handle.Instance->DR);
}
